# KeInFS

./: BUILD.toml  Makefile  README.md  configure
design/: KeInFS_Intend_and_high_level_design.md  KeInFS_Management_API_CLI.md  METADATA_PLANE_TLA_SC.md
observability/: README.md  docker-compose.yml  install-baremetal.sh
observability/grafana/dashboards/: 01-io-lifecycle-overview.json  02-io-lifecycle-drilldown.json  03-kst-overview.json  04-kst-detail.json  05-kix-overview.json  06-kix-detail.json  07-kms-detail.json  08-kas-detail.json
observability/grafana/provisioning/dashboards/: keinfs.yml
observability/grafana/provisioning/datasources/: prometheus.yml
observability/mcp/: .mcp.json  README.md  package-lock.json  package.json  tsconfig.json
observability/mcp/src/: catalog.ts  dayops.ts  index.ts  lifecycle.ts  prometheus.ts
observability/prometheus/: prometheus.yml
observability/skills/: README.md
observability/skills/keinfs-io-lifecycle-debug/: SKILL.md
observability/skills/keinfs-metrics-reference/: SKILL.md
observability/skills/keinfs-observability/: SKILL.md
packaging/templates/config/: kas.toml.in  keinctl-contexts.toml.in  kms.toml.in  krs.toml.in  kst-target.env.in
packaging/templates/systemd/: keinfs-exporter.service.in  keinfs-kas@.service.in  keinfs-kms@.service.in  keinfs-krs@.service.in  keinfs-kst@.service.in
poc/: IMPLEMENTATION_PLAN.md  IO_LIFECYCLE.md  METADATA_NAMESPACE_ARCHITECTURE.md
poc/kas/: Cargo.toml  README.md  build.rs
poc/kas/src/: allocator_store.rs  config.rs  fdb_schema.rs  fdb_store.rs  main.rs  service.rs  stats.rs  store.rs
poc/kee/: Cargo.toml  README.md
poc/kee/src/: backend.rs  error.rs  isa_l_backend.rs  lib.rs  prepared.rs  profile.rs  software.rs  tests.rs
poc/keinbuild/: Cargo.toml
poc/keinbuild/src/: lib.rs
poc/keinctl/: Cargo.toml  README.md  build.rs
poc/keinctl/proto/: control.proto
poc/keinctl/src/: committed_occupancy.rs  lib.rs  main.rs  placement.rs
poc/keinexport/: Cargo.toml
poc/keinexport/src/: convert.rs  discover.rs  main.rs
poc/keisal/: Cargo.toml  build.rs
poc/keisal/src/: lib.rs
poc/kfc/: Cargo.toml  README.md
poc/kfc-core/: Cargo.toml
poc/kfc-core/src/: coherence.rs  core.rs  error.rs  lib.rs  metadata.rs  object.rs  persistent_stripe_store.rs  state.rs  stripe_cache.rs  types.rs
poc/kfc-transport/: Cargo.toml
poc/kfc-transport/src/: fuser_backend.rs  lib.rs  uring_backend.rs
poc/kfc/src/: bench.rs  config.rs  main.rs  metadata.rs  mount.rs
poc/kix/: Cargo.toml  README.md  TODO.md
poc/kix/crates/kix/: Cargo.toml
poc/kix/crates/kix-bench/: Cargo.toml
poc/kix/crates/kix-bench/src/: config.rs  ingress.rs  main.rs  media.rs  recovery.rs  steering.rs  topology.rs  workload.rs
poc/kix/crates/kix/src/: arena.rs  chunk_media.rs  engine.rs  hardware.rs  layout.rs  lib.rs  types.rs
poc/kix/crates/kix/src/arena/: tests.rs
poc/kix/crates/kix/src/engine/: config.rs  runtime.rs  stats.rs  tests.rs
poc/kms/: Cargo.toml  README.md
poc/kms/src/: config.rs  fdb_hot_store.rs  fdb_schema.rs  hot_store.rs  main.rs  read_cache.rs  service.rs  stats.rs  store.rs  watch.rs
poc/kp2/: Cargo.toml  KP2_Spec.md  README.md
poc/kp2/src/: lib.rs
poc/krs/: Cargo.toml  README.md
poc/krs/src/: config.rs  main.rs  stats.rs
poc/ksc/: Cargo.toml  KSC_Design.md  README.md
poc/ksc/src/: bench.rs  client.rs  config.rs  ec_bench.rs  lib.rs  main.rs  object.rs  object_bench.rs  object_cli.rs  smoke.rs  stats.rs
poc/kst/: Cargo.toml  README.md
poc/kst/src/: config.rs  execution.rs  ingress.rs  main.rs  service.rs  stats.rs
poc/kst/src/service/: connection.rs  tests.rs
tools/: keinfs-tooling.sh  kst-runner.sh
tools/git-hooks/: install.sh  pre-commit
