[package]
name = "kas"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

[dependencies]
futures = "0.3"
keinbuild = { path = "../keinbuild" }
keinctl = { path = "../keinctl" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["macros","rt-multi-thread","signal","sync","time"] }
tonic = "0.14"
tonic-health = "0.14"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
foundationdb = { version = "0.10", default-features = false, features = ["embedded-fdb-include", "fdb-7_3"] }

[build-dependencies]
keinbuild = { path = "../keinbuild" }
