[package]
name = "keinctl"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

[dependencies]
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
h2 = "0.4"
http = "1"
keinbuild = { path = "../keinbuild" }
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tonic = "0.14"
tonic-health = "0.14"
tonic-prost = "0.14"
toml = "0.8"

[build-dependencies]
keinbuild = { path = "../keinbuild" }
protoc-bin-vendored = "3"
tonic-prost-build = "0.14"
