[package]
name = "ksc"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

[features]
default = []
isa-l-backend = ["kee/isa-l-backend"]

[dependencies]
async-nats = "0.39"
bytes = "1"
futures-util = "0.3"
h2 = "0.4"
hex = "0.4"
http = "1"
kee = { path = "../kee" }
keinbuild = { path = "../keinbuild" }
keinctl = { path = "../keinctl" }
kp2 = { path = "../kp2" }
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tonic = { version = "0.14", features = ["transport"] }

[build-dependencies]
keinbuild = { path = "../keinbuild" }
