[package]
name = "kst"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

[dependencies]
bytes = "1"
core_affinity = "0.8"
crossbeam-channel = "0.5"
h2 = "0.4"
hex = "0.4"
http = "1"
keinbuild = { path = "../keinbuild" }
kix = { path = "../kix/crates/kix" }
kp2 = { path = "../kp2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }

[build-dependencies]
keinbuild = { path = "../keinbuild" }
